--- a/docs/less/web-dev-tool.less
+++ b/docs/less/web-dev-tool.less
@@ -211,21 +211,17 @@
                 }
             }
 
-            .children {
-                //display: none;
-            }
-
-            .attribute {
+            ._wdt-attribute {
                 display: inline-block;
                 color: #9bb6c7;
             }
 
-            .value {
+            ._wdt-value {
                 display: inline-block;
                 color: #d38643;
             }
 
-            .white {
+            ._wdt-white {
                 display: inline-block;
                 color: #fff;
             }
@@ -512,6 +508,7 @@
                 flex: 1;
                 position: relative;
                 border-left: 1px solid #4c4c4c;
+                padding: 0.5rem;
                 overflow: auto;
             }
         } // END SOURCE PAGE.
