--- a/docs/css/web-dev-tool.css
+++ b/docs/css/web-dev-tool.css
@@ -183,15 +183,15 @@
   background-color: #252c36;
   cursor: default;
 }
-#_web-dev-tool #_wdt-page #_wdt-elementPage .attribute {
+#_web-dev-tool #_wdt-page #_wdt-elementPage ._wdt-attribute {
   display: inline-block;
   color: #9bb6c7;
 }
-#_web-dev-tool #_wdt-page #_wdt-elementPage .value {
+#_web-dev-tool #_wdt-page #_wdt-elementPage ._wdt-value {
   display: inline-block;
   color: #d38643;
 }
-#_web-dev-tool #_wdt-page #_wdt-elementPage .white {
+#_web-dev-tool #_wdt-page #_wdt-elementPage ._wdt-white {
   display: inline-block;
   color: #fff;
 }
@@ -424,5 +424,6 @@
   flex: 1;
   position: relative;
   border-left: 1px solid #4c4c4c;
+  padding: 0.5rem;
   overflow: auto;
 }
